Trying yet another image spacing fix

--- a/_sass/layout/_services.scss
+++ b/_sass/layout/_services.scss
@@ -4,7 +4,8 @@
 }
 
 .service-logo-container {
-  height: 100px;
+  //height: 100px;
+  height: auto;
 }
 
 .service-logo {
